[package]
name = "elmesque"
version = "0.9.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "An attempt at porting Elm's incredibly useful, purely functional std graphics modules."
readme = "README.md"
keywords = ["elm", "graphics", "2d", "ui", "shape"]
license = "MIT"
repository = "https://github.com/mitchmindtree/elmesque.git"
homepage = "https://github.com/mitchmindtree/elmesque"


[dependencies]
num = "*"
piston2d-graphics = "0.10.0"
rand = "*"
rustc-serialize = "*"
vecmath = "0.2.0"

[dev-dependencies]
find_folder = "0.2.0"
piston = "0.11.0"
piston_window = "0.21.0"
